# rednote-auto

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
config/: config.yaml
scripts/: setup_xhs_login.py
src/: __init__.py  config.py  inngest_client.py  main.py
src/agents/: __init__.py  base.py  publisher_agent.py  translator_agent.py  twitter_agent.py
src/functions/: __init__.py  publish_content.py  sync_twitter.py  translate_tweet.py
src/models/: __init__.py  sync_record.py  tweet.py
src/persistence/: __init__.py  database.py
src/services/: __init__.py  translator_service.py  twitter_service.py  wechat_service.py  xhs_service.py
tests/: __init__.py  test_config.py  test_database.py  test_functions.py  test_inngest_client.py  test_main.py  test_models.py  test_translator.py  test_twitter_service.py  test_wechat_service.py  test_xhs_service.py
tests/test_agents/: test_base.py  test_publisher_agent.py  test_translator_agent.py  test_twitter_agent.py
