[project]
name = "rednote-auto"
version = "0.1.0"
description = "Auto-sync X (Twitter) content to 小红书 and 微信公众号"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # Workflow engine
    "inngest>=0.4.0",

    # Translation
    "openai>=1.0.0",

    # Publishing platforms
    "wechatpy>=1.8.0",
    "cryptography>=41.0.0",
    "playwright>=1.40.0",

    # Persistence
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",

    # Configuration
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/functions/sync_twitter.py",
    "src/functions/translate_tweet.py",
    "src/functions/publish_content.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
fail_under = 80

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
